--- a/maipogrande/core/templates/core/about.html
+++ b/maipogrande/core/templates/core/about.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/base-inicial.html' %}
 
 {% block titulo %}
     Feria Virtual - Maipo Grande
@@ -10,7 +10,7 @@
         de título de la carrera de "Ingeniería en informática"
         en la escuela de informática y telecomunicaciones, DUOC UC.
     </p>
-    <p class="lead">    <p class="lead">
+    <p class="lead"> 
         Los alumnos que integran el equipo de trabajo son los siguientes:
         <ul>
             <li>Claudio Arenas Carril</li>
