--- a/maipogrande/login/templates/login/login.html
+++ b/maipogrande/login/templates/login/login.html
@@ -8,10 +8,10 @@
 
 {% block contenido %}
   <form class="text-justify border border-light p-5" method="POST">
-    <p class="lead mb-4">
+    <p class="lead mb-4 px-5">
       Ingrese sus credenciales de inicio de sesión, luego presione el botón "Entrar".
     </p>
-    <div class="form-group col-4">
+    <div class="form-group col-4 text-center" style="self">
     {% csrf_token %}
     {% if form.non.field.errors %}
       {{ form.non.field.errors }}
