--- a/maipogrande/core/templates/core/about.html
+++ b/maipogrande/core/templates/core/about.html
@@ -13,10 +13,14 @@
     <p class="lead"> 
         Los alumnos que integran el equipo de trabajo son los siguientes:
         <ul>
-            <li>Claudio Arenas Carril</li>
-            <li>Matías Avalos Arcos</li>
-            <li>Daniel García Asathor</li>
-            <li>Lucas Repetto Asencio</li>
+            Claudio Arenas Carril
+            <br>
+            Matías Avalos Arcos
+            <br>
+            Daniel García Asathor
+            <br>
+            Lucas Repetto Asensio
+            <br>
         </ul>
     </p>
     <p class="lead">
