--- a/maipogrande/core/templates/core/base.html
+++ b/maipogrande/core/templates/core/base.html
@@ -20,7 +20,7 @@
     {% endblock %}
   </head>
 
-  <body class="text-dark bg-light text-justify">
+  <body class="text-dark bg-light text-justify py-0">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-sm p-3 navbar-light" style="background-color: darkslategray;">
       <div class="container-fluid">
