--- a/maipogrande/productor/templates/productor/home-productor.html
+++ b/maipogrande/productor/templates/productor/home-productor.html
@@ -7,10 +7,11 @@
 {% block menu %}
     <a class="enlace" href="{% url 'iniciarComercial' %}">Datos comerciales</a>
     <br><br>
-    <p class="text-justify"><b>Productos</b></p>
+    <p class="text-justify text-center font-weight-bold" style="color: white;">Productos</p>
     <a class="enlace" href="{% url 'actualizarListaProductos' %}">Lista de productos</a>
+    <br>
     <a class="enlace" href="{% url 'registrarProducto' %}">Agregar producto</a>
-    <p class="text-justify"><b>Contratos</b></p>
+    <p class="text-justify text-center font-weight-bold" style="color: white;">Contratos</p>
     <a class="enlace" href="{% url 'listarContratos' %}">Lista de contratos</a>
 {% endblock %}
 
