--- a/maipogrande/dcomercial/templates/dcomercial/comercial-registrar.html
+++ b/maipogrande/dcomercial/templates/dcomercial/comercial-registrar.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/base-inicial.html' %}
 {% load static %}
 {% load bootstrap %}
 
@@ -8,18 +8,20 @@
 
 {% block contenido %}
     <form class="text-justify border border-light p-5" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
-        <p class="lead text-center ">
+        <p class="lead text-center">
             Ingrese sus datos comerciales, cuando este listo, pulse el botón "Grabar".
         </p>
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive">
+        <table class="tabla table-responsive mx-auto" style="width: 400px;">
             {{ form }}
         </table>
-        <button type="submit" class="btn btn-success mt-3">Grabar</button>
-        <a class="btn btn-light" href="{% url 'dinamicHome' %}" role="button"> Cancelar </a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-success mt-3">Grabar</button>
+            <a class="btn btn-light mt-3" href="{% url 'dinamicHome' %}" role="button"> Cancelar </a>
+        </div>
     </form>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
