--- a/maipogrande/productor/templates/productor/producto-registrar.html
+++ b/maipogrande/productor/templates/productor/producto-registrar.html
@@ -8,17 +8,19 @@
 
 {% block contenido %}
     <form class="text-justify border border-light p-5" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
-        <p class="lead text-center ">
+        <p class="lead text-center">
             Ingrese los datos de su producto, cuando este listo, pulse el botón "Grabar".
         </p>
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive">
+        <table class="tabla table-responsive mx-auto" style="width: 600px;">
             {{ form }}
         </table>
-        <button type="submit" class="btn btn-success mt-3"> Grabar producto </button>
-        <a class="btn btn-light" href="{% url 'listarProductos' %}" role="button"> Cancelar </a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-success mt-3"> Grabar producto </button>
+            <a class="btn btn-light mt-3" href="{% url 'listarProductos' %}" role="button"> Cancelar </a>
+        </div>
     </form>
 {% endblock %}
