--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -7,12 +7,12 @@
 {% block menu %}
     <a class="enlace" href="{% url 'iniciarComercial' %}">Datos comerciales</a>
     {% if comercial %}
-      <p class="text-justify text-center"><b>Vehiculos</b></p>
+      <p class="text-justify text-center font-weight-bold" style="color: white;"><b>Vehiculos</b></p>
       <a class="enlace" href="{% url 'actualizarListaVehiculos' %}">Lista de vehiculos</a>
       <br>
       <a class="enlace" href="{% url 'registrarVehiculo' %}">Agregar vehiculo</a>
       <br>
-      <p class="text-justify text-center"><b>Contratos</b></p>
+      <p class="text-justify text-center font-weight-bold" style="color: white;"><b>Contratos</b></p>
       <a class="enlace" href="{% url 'listarContratos' %}">Lista de contratos</a>
       <br>
     {% endif %}
