--- a/maipogrande/transportista/templates/transportista/vehiculo-editar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-editar.html
@@ -15,10 +15,12 @@
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive">
+        <table class="tabla table-responsive mx-normal" style="width: 400px;">
             {{ form }}
         </table>
-        <button type="submit" class="btn btn-success mt-3">Actualizar vehículo</button>
-        <a class="btn btn-light" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-success mt-3">Actualizar vehículo</button>
+            <a class="btn btn-light mt-3" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
+        </div>
     </form>
 {% endblock %}
