--- a/maipogrande/transportista/templates/transportista/vehiculo-eliminar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-eliminar.html
@@ -6,13 +6,15 @@
 
 {% block contenido %}
     <form class="text-justify border border-light p-5" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
-        <p class="lead text-justify ">
+        <p class="lead text-justify text-center">
             ¿Esta seguro de eliminar el vehículo con patente 
             {{ vehicle.VehiclePatent }}, modelo {{ vehicle.VehicleModel }}
             con capacidad {{ vehicle.VehicleCapacity }}(KG)?<br>
         </p>
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger mt-3"> Eliminar vehiculo </button>
-        <a class="btn btn-success" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-danger mt-3"> Eliminar vehiculo </button>
+            <a class="btn btn-success mt-3" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
+        </div>
     </form>
 {% endblock %}
