--- a/maipogrande/transportista/templates/transportista/vehiculo-registrar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-registrar.html
@@ -8,17 +8,19 @@
 
 {% block contenido %}
     <form class="text-justify border border-light p-5" method="post" id="vehicleForm">
-        <p class="lead text-center ">
+        <p class="lead text-center">
             Ingrese los datos de su vehículo, cuando este listo, pulse el botón "Grabar vehículo".
         </p>
         {% csrf_token %}
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive">
+        <table class="tabla table-responsive mx-normal" style="width: 500px;">
             {{ form }}
         </table>
-        <button type="submit" class="btn btn-success mt-3"> Grabar vehículo </button>
-        <a class="btn btn-light" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-success mt-3"> Grabar vehículo </button>
+            <a class="btn btn-light mt-3" href="{% url 'listarVehiculos' %}" role="button"> Cancelar </a>
+        </div>
     </form>
 {% endblock %}
