--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -6,7 +6,7 @@
 
 {% block contenido %}
     <p class="small">
-        Registre su orden de compra Externo, una vez que este listo, pulse
+        Registre su orden de compra, una vez que este listo, pulse
         el botón "grabar orden".<br>
         procesaremos su orden de compra y notificaremos por correo 
         electrónico cuando tengamos las mejores ofertas para usted, 
