Cambios visualizacion orden de compra

--- a/maipogrande/cexterno/templates/cexterno/home-externo.html
+++ b/maipogrande/cexterno/templates/cexterno/home-externo.html
@@ -31,7 +31,7 @@
     {% endif %}
     <div class="row">
         <div class="col-md-4">
-            <h3>datos comerciales</h3>
+            <h3>Datos comerciales</h3>
             <p class="text-justify small" >
                 Usted podrá:
                 <ul>
