--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -47,7 +47,7 @@
                 <table class="col-md-7 table-responsive">
                     <thead>
                         <th>Producto</th>
-                        <th>Cantidad</th>
+                        <th>Cantidad (kg)</th>
                         <th></th>
                     </thead>
                     {% for detalle in order_detail %}
