--- a/maipogrande/ordenes/templates/ordenes/orden-ver.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-ver.html
@@ -13,8 +13,51 @@
         posibles problemas que puedan sucitarse con sus ordenes de compras.
     </p>
 
-    <h1> Aqui colocar el detalle de la orden </h1>>
 
+
+
+    <div class="table-responsive justify-content-center">
+        <h4>Datos de la orden de compra</h4>
+        <table class="table table-striped table-hover col-6 bg-light border border-light p-5 text-justify text-black">
+            <tbody>
+                <tr>
+                    <td>Fecha</td>
+                    <td>{{ order.OrderDate }}</td>
+                </tr>
+                <tr>
+                    <td>Condición de pago</td>
+                    <td>{{ order.PaymentCondition.ConditionDescription }}</td>
+                </tr>
+
+                <tr>
+                    <td>Datos de la orden de compra</td>
+                    <td>
+                        Fecha: {{ order.OrderDate }}<br>
+                        Condición de pago: {{ order.PaymentCondition.ConditionDescription }}<br>
+                        Descuento: {{ order.OrderDiscount }} %<br>
+                        Observación: {{ order.Observation }}<br> 
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <h4>Detalle de la orden de compra</h4>
+        <table class="table table-striped table-hover col-6 bg-light border border-light p-5 text-justify text-black">
+            <theader>
+                <th></th>
+                <th>Producto</th>
+                <th>Cantidad</th>
+            </theader>
+            <tbody>
+                    {% for detail in order_detail %}
+                        <tr>
+                            <td class ="text-right">{{ forloop.counter }}</td>
+                            <td>{{ detail.ProductName}}</td>
+                            <td>{{ detail.Quantity}} KG<br></td>
+                        </tr>
+                    {% endfor %}
+            </tbody>
+        </table>
+    </div>
     <br><br>
     <a class="btn btn-primary" 
         href="{{ order.get_update_url }}" role="button"> Actualizar orden de compra </a>
