--- a/maipogrande/ordenes/templates/ordenes/orden-listar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-listar.html
@@ -30,7 +30,7 @@
     
     <!-- Listando las ordenes de compra -->
     {% if order_list %}
-        <table class="table table-responsive table-hover table-striped">
+        <table class="table table-responsive table-hover table-striped mx-auto" style="width: 750px;">
             <thead>
                 <tr>
                     <th>Orden Nro.</th>
@@ -90,6 +90,8 @@
 
     <!-- volver a la pagina de inicio -->
     <br>
+    <div class="text-center">
     <a class="btn btn-secondary" href="{% url 'dinamicHome' %}" role="button"> Volver página de inicio </a>
+    </div>
 
 {% endblock %}
