--- a/maipogrande/transportista/templates/transportista/vehiculo-editar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-editar.html
@@ -15,7 +15,7 @@
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive mx-normal" style="width: 400px;">
+        <table class="tabla table-responsive">
             {{ form }}
         </table>
         <div class="text-center">
