--- a/maipogrande/transportista/templates/transportista/vehiculo-listar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-listar.html
@@ -29,7 +29,7 @@
     
     <!-- Listando los vehiculos -->
     {% if vehicle_list %}
-        <table class="table table-responsive table-hover table-striped">
+        <table class="table table-responsive table-hover table-striped mx-auto" style="width: 750px;">
             <thead>
                 <tr>
                     <th>Patente</th>
