--- a/maipogrande/cinterno/templates/cinterno/home-interno.html
+++ b/maipogrande/cinterno/templates/cinterno/home-interno.html
@@ -7,7 +7,7 @@
 {% block menu %}
 <a class="enlace" href="{% url 'iniciarComercial' %}">Datos comerciales</a>
     <br><br>
-    <p class="text-justify"><b>Ordenes de compra</b></p>
+    <p class="text-justify text-center"><b>Ordenes de compra</b></p>
     <a class="enlace" href="{% url 'listarOrdenes' %}">Lista de ordenes</a>
     <br>
     <a class="enlace" href="{% url 'registrarOrden' %}"> Nueva orden </a>
