--- a/maipogrande/ordenes/templates/ordenes/orden-registrar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-registrar.html
@@ -20,21 +20,21 @@
                 {% csrf_token %}
                 <!-- Datos del formulario de orden de compra -->
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-4">
                         <label>Fecha</label>
                         {{ form.OrderDate }}
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-4" style="height: 50px;">
                         <label>Condición de pago</label>
                         {{ form.PaymentCondition }}
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-4">
                         <label>Descuento</label>
                         {{ form.OrderDiscount }}
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-12">
                         <label>Observación :</label>
                         {{ form.Observation }}
                     </div>
@@ -44,7 +44,7 @@
                 <!-- formulario de detalle de orden de compra -->
                 <h4>Detalle de orden de compra</h4>
                 {{ order_detail.management_form }}
-                <table class="col-md-7 table-responsive">
+                <table class="col-md-7 table-responsive mx-auto" style="width: 500px;">
                     <thead>
                         <th>Producto</th>
                         <th>Cantidad (kg)</th>
@@ -68,7 +68,7 @@
                     {% endfor %}
                 </table>
                 <br><br><br>
-                <button class="btn btn-lg btn-success" type="submit"> Grabar orden </button>
+                <button class="btn btn-m btn-success" type="submit"> Grabar orden </button>
                 <a class="btn btn-light" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
             </form>
         </div>
