--- a/maipogrande/transportista/templates/transportista/vehiculo-registrar.html
+++ b/maipogrande/transportista/templates/transportista/vehiculo-registrar.html
@@ -15,7 +15,7 @@
         {% if form.non.field.errors %}
             {{ form.non.field.errors }}
         {% endif %}
-        <table class="tabla table-responsive mx-normal" style="width: 500px;">
+        <table class="tabla table-responsive mx-auto" style="width: 500px;">
             {{ form }}
         </table>
         <div class="text-center">
