Formulario de ordenes validado

--- a/maipogrande/ordenes/templates/ordenes/orden-editar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-editar.html
@@ -78,8 +78,8 @@
 <script src='{% static "core/vendor/jquery/jquery.formset.js" %}'></script>
 <script type="text/javascript">
     $('.formset_row-{{ order_detail.prefix }}').formset({
-        addText: 'agregar producto',
-        deleteText: 'quitar',
+        addText: 'Agregar producto',
+        deleteText: 'Quitar',
         prefix: '{{ order_detail.prefix }}',
     });
 </script>
