--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -83,7 +83,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="https://placehold.it/300x200" alt="">
           <div class="card-body">
-            <h4 class="card-title">datos comerciales</h4>
+            <h4 class="card-title">Datos comerciales</h4>
             <p class="card-text">
               Usted podrá:
               <ul>
