--- a/maipogrande/productor/templates/productor/producto-listar.html
+++ b/maipogrande/productor/templates/productor/producto-listar.html
@@ -29,7 +29,7 @@
     
     <!-- Listando los productos del productor -->
     {% if producto_list %}
-        <table class="table table-responsive table-hover table-striped">
+        <table class="table table-responsive table-hover table-striped mx-auto" style="width: 700px;">
             <thead>
                 <tr>
                     <th>Producto</th>
