--- a/maipogrande/ordenes/templates/ordenes/orden-eliminar.html
+++ b/maipogrande/ordenes/templates/ordenes/orden-eliminar.html
@@ -6,11 +6,13 @@
 
 {% block contenido %}
     <form class="text-justify border border-light p-5" method="post" id="comercialForm" urlCiudades="{% url 'cargarCiudades' %}">
-        <p class="lead text-justify ">
+        <p class="lead text-justify mx-auto" style="width: 400px;">
             ¿Esta seguro de eliminar  la orden de compra?
         </p>
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger mt-3"> Eliminar orden de compra </button>
-        <a class="btn btn-success" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
+        <div class="text-center">
+            <button type="submit" class="btn btn-danger mt-3"> Eliminar orden de compra </button>
+            <a class="btn mt-3 btn-success" href="{% url 'listarOrdenes' %}" role="button"> Cancelar </a>
+        </div>
     </form>
 {% endblock %}
