Creación vista subasta

--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -14,6 +14,9 @@
     <p class="text-justify text-center font-weight-bold" style="color: white;"><b>Contratos</b></p>
     <a class="enlace" href="{% url 'listarContratos' %}">Lista de contratos</a>
     <br>
+    <p class="text-justify text-center font-weight-bold" style="color: white;"><b>Subastas</b></p>
+    <a class="enlace" href="{% url 'listarSubastas' %}">Lista de subastas</a>
+    <br>
     {% endblock %}
 
 {% block contenido %}
