--- a/maipogrande/transportista/templates/transportista/home-transportista.html
+++ b/maipogrande/transportista/templates/transportista/home-transportista.html
@@ -17,6 +17,8 @@
     <p class="text-justify text-center font-weight-bold" style="color: white;"><b>Subastas</b></p>
     <a class="enlace" href="{% url 'listarSubastas' %}">Lista de subastas</a>
     <br>
+    <a class="enlace" href="">Confirmar/retirar puja</a>
+    <br>
     {% endblock %}
 
 {% block contenido %}
